--- a/updates.html
+++ b/updates.html
@@ -1,11 +1,4 @@
 ---
-layout: page
-title: Updates
+layout: update
 permalink: /updates
 ---
-
-{% for update in site.updates %}
-  <h2>{{update.release}} (version {{update.version}})</h2>
-  {% include update-intro.html %}
-  {{ update.content | markdownify }}
-{% endfor %}
